# DOBOT

./: .gitignore  CMakeLists.txt  README.txt
FE/: mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: gameareaselector.h  gamecontroller.h  statemachine.h
resources/: qrc.qrc
scripts/: targetwindow_test.cpp
src/: gameareaselector.cpp  gamecontroller.cpp  statemachine.cpp
